--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "react_tour_project_101",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://yildirimesutx.github.io/react_tour_project_101",
+  "homepage": "https://yildirimesutx.github.io/react_tour_project_101",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
